--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li>
           <button onclick="toggleTopics('unit1-topics')">Unidad 1</button>
           <ul id="unit1-topics" class="topics hidden">
-            <li><button onclick="loadPDF('unidad1_tarea1.pdf')">Tema 1: Introducción</button></li>
+            <li><button onclick="loadPDF('unidad1/unidad1_tarea1.pdf')">Tema 1: Introducción</button></li>
             <li><button onclick="loadPDF('unidad1_tema2.pdf')">Tema 2: Conceptos básicos</button></li>
           </ul>
         </li>
