Se arreglo la visualizacion de todo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <!-- Botón para ocultar/mostrar sidebar -->
+    <!-- Botón para Sidebar -->
     <button class="toggle-sidebar" onclick="toggleSidebar()">☰</button>
   
     <!-- Pantalla de Portada -->
@@ -47,6 +47,7 @@
     </div>
     <script src="script.js"></script>
   </body>
+  
   
 
 </html>
