--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="logo.png" alt="Logo de la institución" class="cover-logo">
       <h1>Portafolio de Evidencias del Curso de Desarrollo de Aplicaciones Web</h1>
       <p><strong>Estudiante:</strong> Gustavo Adolfo Gutiérrez Martínez</p>
-      <p><strong>Profesor:</strong> Nombre del Profesor</p>
+      <p><strong>Profesor:</strong>Salazar Del Bosque Miguel</p>
       <p><strong>Fecha:</strong> 12/2024</p>
       <button class="enter-button" onclick="enterPortfolio()">Entrar</button>
     </div>
